# badukiplus

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  TODO  aclocal.m4  badukiplus.kdevprj  badukiplus.kdevses  badukiplus.lsm  configure  configure.in  configure.in.in  subdirs
Documentation/: FILES  Introduction  README.script  Rules  Terminology  twogtp1or2.py
admin/: am_edit
admin/CVS/: Entries  Repository  Root  Tag
badukiplus/: Makefile.am  Makefile.in  baduki.cpp  baduki.h  game.h  gtp.cpp  gtp.h  killable.cpp  main.cpp  patterns.cpp  patterns.h  patterns.h.bak  patternsdat.h  patternsdat.h.bak  patternsval.cpp  think.cpp  utils.cpp
badukiplus/docs/: Makefile.in
badukiplus/docs/en/: Makefile.in  index-1.html  index-2.html  index-3.html  index-4.html  index-5.html  index-6.html  index.html  index.sgml
