####### kdevelop will overwrite this part!!! (begin)##########
bin_PROGRAMS = badukiplus

## INCLUDES were found outside kdevelop specific part

badukiplus_SOURCES = patternsval.cpp patterns.cpp think.cpp killable.cpp utils.cpp baduki.cpp gtp.cpp main.cpp 
badukiplus_LDADD   = 

SUBDIRS = docs 

EXTRA_DIST = main.cpp game.h gtp.cpp gtp.h baduki.cpp baduki.h utils.cpp killable.cpp think.cpp patterns.cpp patterns.h patternsval.cpp patternsdat.h 

####### kdevelop will overwrite this part!!! (end)############
# set the include path found by configure
INCLUDES= $(all_includes)
 
# the library search path.
badukiplus_LDFLAGS = $(all_libraries) 
                                                                                
